--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&display=swap');
+
+:root{
+    --color-background: #93C5FD;
+    --dark-color-background: #1E3A8A;
+    --circle-color: yellow;
+    --dark-circle-color: #e4e4e4;
+}
+
+[class="dark"]{
+    --color-background: var(--dark-color-background);
+    --circle-color: var(--dark-circle-color)
+}
+
+@layer base{
+    body{
+        background-color: var(--color-background);
+    }
+}
+
+.circle{
+    width: 30rem;
+    height: 30rem;
+    background-color: var(--circle-color);
+    border-radius: 100%;
+    margin-top: -15rem;
+    margin-left: -15rem;
+}
